--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -308,6 +308,9 @@
                                             </label>
                                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ZQk-f4-zrz">
                                                 <rect key="frame" x="0.0" y="124.00000000000003" width="94" height="32"/>
+                                                <connections>
+                                                    <action selector="touchUpStepper:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="FYL-mb-h03"/>
+                                                </connections>
                                             </stepper>
                                         </subviews>
                                         <constraints>
@@ -339,6 +342,9 @@
                                             </label>
                                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="O5s-2N-3iP">
                                                 <rect key="frame" x="0.0" y="124.00000000000003" width="94" height="32"/>
+                                                <connections>
+                                                    <action selector="touchUpStepper:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="tzx-mF-0Ih"/>
+                                                </connections>
                                             </stepper>
                                         </subviews>
                                         <constraints>
@@ -370,6 +376,9 @@
                                             </label>
                                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Rcr-xr-eqz">
                                                 <rect key="frame" x="0.0" y="124.00000000000003" width="94" height="32"/>
+                                                <connections>
+                                                    <action selector="touchUpStepper:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="W2c-lM-8B6"/>
+                                                </connections>
                                             </stepper>
                                         </subviews>
                                         <constraints>
@@ -401,6 +410,9 @@
                                             </label>
                                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="klA-59-Nu4">
                                                 <rect key="frame" x="0.0" y="124.00000000000003" width="94" height="32"/>
+                                                <connections>
+                                                    <action selector="touchUpStepper:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="1ya-Zn-a1N"/>
+                                                </connections>
                                             </stepper>
                                         </subviews>
                                         <constraints>
@@ -432,6 +444,9 @@
                                             </label>
                                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="xbn-6P-grO">
                                                 <rect key="frame" x="0.0" y="124.00000000000003" width="94" height="32"/>
+                                                <connections>
+                                                    <action selector="touchUpStepper:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="7kK-AH-8VK"/>
+                                                </connections>
                                             </stepper>
                                         </subviews>
                                         <constraints>
@@ -463,15 +478,23 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="닫기"/>
                                 <buttonConfiguration key="configuration" style="plain" title="닫기"/>
+                                <connections>
+                                    <action selector="touchUpDismissButton:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="XoB-5z-Lgv"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="bananaCountLabel" destination="gKu-86-RhI" id="q95-H3-b3W"/>
+                        <outlet property="bananaStepper" destination="O5s-2N-3iP" id="eBG-h6-sU8"/>
                         <outlet property="kiwiCountLabel" destination="ZDv-1m-HBY" id="LhX-US-rbJ"/>
+                        <outlet property="kiwiStepper" destination="klA-59-Nu4" id="a7l-lf-C1e"/>
                         <outlet property="mangoCountLabel" destination="YJI-ER-LJR" id="lk7-W1-IUf"/>
+                        <outlet property="mangoStepper" destination="xbn-6P-grO" id="AO2-8M-d1z"/>
                         <outlet property="pineappleCountLabel" destination="MpT-VW-hCb" id="BgW-0c-RSi"/>
+                        <outlet property="pineappleStepper" destination="Rcr-xr-eqz" id="4Lv-n2-R6s"/>
                         <outlet property="strawberryCountLabel" destination="0yV-kn-zaT" id="ULO-5Z-68F"/>
+                        <outlet property="strawberryStepper" destination="ZQk-f4-zrz" id="w1F-UA-Lg5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ieh-6D-g1l" sceneMemberID="firstResponder"/>
