--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -127,7 +127,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="clickButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gri-2y-Q4A"/>
+                                                    <action selector="didTapJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uD5-QW-O8J"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9E2-H9-FXr">
@@ -142,7 +142,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="clickButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XMY-Nz-wjb"/>
+                                                    <action selector="didTapJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eqr-a2-VM3"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -161,7 +161,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="clickButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6J4-8F-2XS"/>
+                                                            <action selector="didTapJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y2Y-jS-T8h"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2A-PH-DJY">
@@ -172,7 +172,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="clickButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="woa-SR-YLR"/>
+                                                            <action selector="didTapJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B5q-W5-3Ja"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BFb-ka-wGA">
@@ -183,7 +183,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="clickButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Beq-hI-sNe"/>
+                                                            <action selector="didTapJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5iD-fD-dbN"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-7H-RXw">
@@ -194,7 +194,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="clickButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kyk-qU-zIM"/>
+                                                            <action selector="didTapJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LYo-FA-hd6"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6G-4X-bVm">
@@ -205,7 +205,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="clickButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0fF-2h-i6v"/>
+                                                            <action selector="didTapJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FKH-FM-P8e"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
