--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -127,7 +127,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="makeJuiceTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="W62-sQ-pyo"/>
+                                                    <action selector="makeJuiceButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GfA-8H-Ggx"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9E2-H9-FXr">
@@ -142,7 +142,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="makeJuiceTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JuW-82-MfD"/>
+                                                    <action selector="makeJuiceButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="I3N-gG-6xT"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -161,7 +161,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="makeJuiceTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aqu-dM-Pb6"/>
+                                                            <action selector="makeJuiceButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ls4-8l-QH5"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="OrderBanana" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2A-PH-DJY">
@@ -172,7 +172,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="makeJuiceTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wcZ-hW-c7d"/>
+                                                            <action selector="makeJuiceButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AiQ-Gh-ZTq"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="OrderPineapple" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BFb-ka-wGA">
@@ -183,7 +183,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="makeJuiceTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dwj-Bo-e6S"/>
+                                                            <action selector="makeJuiceButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qyx-XQ-OpK"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="OrderKiwi" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-7H-RXw">
@@ -194,7 +194,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="makeJuiceTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Qr-op-fEM"/>
+                                                            <action selector="makeJuiceButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gzz-5c-gys"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="OrderMango" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6G-4X-bVm">
@@ -205,7 +205,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="makeJuiceTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NUC-aD-VYl"/>
+                                                            <action selector="makeJuiceButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mLL-UU-Hc1"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
