--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -388,6 +388,18 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="g4W-fY-l7r"/>
+                    <connections>
+                        <outlet property="bananaStepper" destination="O5s-2N-3iP" id="6Eg-Tm-8x6"/>
+                        <outlet property="bananaStockUILabel" destination="gKu-86-RhI" id="DEa-Yh-eF7"/>
+                        <outlet property="kiwiStepper" destination="klA-59-Nu4" id="GfP-Q1-8P9"/>
+                        <outlet property="kiwiStockUILabel" destination="ZDv-1m-HBY" id="nnj-SV-re7"/>
+                        <outlet property="mangoStepper" destination="xbn-6P-grO" id="M3M-Ke-zLN"/>
+                        <outlet property="mangoStockUILabel" destination="YJI-ER-LJR" id="fug-Ir-uwu"/>
+                        <outlet property="pineappleStepper" destination="Rcr-xr-eqz" id="4VV-xZ-qUF"/>
+                        <outlet property="pineappleStockUILabel" destination="MpT-VW-hCb" id="bm0-7h-gQi"/>
+                        <outlet property="strawberryStepper" destination="ZQk-f4-zrz" id="r2f-kU-9oZ"/>
+                        <outlet property="strawberryStockUILabel" destination="0yV-kn-zaT" id="4eY-Mm-TFD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ieh-6D-g1l" sceneMemberID="firstResponder"/>
             </objects>
