feat: Modal방식에 따른 라이프사이클 변화로 인한 데이터 전달

--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -415,7 +415,7 @@
         <!--Navigation Controller-->
         <scene sceneID="OND-6z-AC8">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="noc-D0-Kav" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="fruitStoreNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="noc-D0-Kav" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="6Se-wZ-VVV">
                         <rect key="frame" x="0.0" y="47" width="844" height="32"/>
